# filmbro

./: Cargo.toml  README.md  config.rs  main.rs
commands/: cmds.rs  film.rs  letterboxd.rs  mod.rs
commands/utils/: lbxd_util.rs  mod.rs  paginator.rs  structs.rs  tmdb_util.rs
