[package]
name = "filmbro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
scraper = "0.14.0"
tokio = "1.24.1"
poise = { git = "https://github.com/serenity-rs/poise" }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
human_format = "1.0.3"
html-escape = "0.2.13"